src/objects/AffiliatedBusinessAccounts__c.object
<CustomObject>
    <fields>
        <fullName>ABA_BusinessGroup__c</fullName>
        <label>Business Group</label>
        <referenceTo>BusinessGroup__c</referenceTo>
        <relationshipLabel>Affiliated Business Accounts</relationshipLabel>
        <relationshipName>BusinessGroupMemberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ABA_BypassProcess__c</fullName>
        <label>Bypass Process</label>
        <picklist>
            <picklistValues>
                <fullName>P05 - BGM - SetMasterAccount</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ABA_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Master Accounts can be chosen</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Master Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Group Affiliations (Master)</relationshipLabel>
        <relationshipName>BusinessGroupMembershipsMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ABA_NetworkAccount__c</fullName>
        <label>Network Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Network or Owner accounts can be affiliated to a Business Group</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value>Master Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Group Affiliations</relationshipLabel>
        <relationshipName>BusinessGroupAffiliation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ABA_isAffiliated__c</fullName>
        <label>Affiliated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Affiliated Business Account</label>
    <nameField>
        <displayFormat>ABA{00000000}</displayFormat>
        <label>Affiliation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliated Business Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>